# API-rust

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  Rocket.toml
src/: main.rs
src/controllers/: contactinfo_controller.rs  location_controller.rs  mod.rs  notification_controller.rs  service_controller.rs
src/custom/: error.rs
src/models/: contactinfo_model.rs  location_model.rs  mod.rs  notification_model.rs  service_model.rs
