[package]
name = "olahbarbershop-api"
version = "0.1.0"
edition = "2021"
description = "The REST API for the Oláh Barbershop app and website."
authors = ["pml68"]
license = "GPL-3.0"

[dependencies]
rocket = {version = "0.5.0", features = ["json", "tls"]}
serde = "1.0.197"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["sync"]
